k8/k8-Customer-App.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-deployment
  labels:
    app: customer
spec:
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
        - name: customer
          image: customer-app
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  labels:
    app: customer
spec:
  selector:
    app: customer
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
