k8/k8-Customer-Db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-app
  labels:
    app: postgres-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: postgres-app
  template:
     metadata:
      labels:
        app: postgres-app
     spec:
       containers:
        - name: postgres-app
          image: postgres:latest
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data2
       volumes:
        - name: postgres-data2
          persistentVolumeClaim:
            claimName: postgres-volume-claim
       restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres-app
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30012
  type: NodePort
