k8/k8-Customer-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: title
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: SedatTech.com
    - http:
        paths:
          - path: /customer
            pathType: Prefix
            backend:
              service:
                name: customer
                port:
                  number: 80
